--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    /* background-color: #121212 */
+    background-color: #121212;
 }
 
 .navbar {
@@ -16,7 +16,7 @@ body {
 .navbar .container {
     max-width: 1100px;
     margin: 0 auto;
-    padding: 15px 0px;
+    padding: 15px 30px;
     display: flex;
     justify-content: space-between;
 }
@@ -46,13 +46,13 @@ ul {
 }
 
 .section .container {
-    border: 2px solid red;
+    display: flex;
+    padding: 30px;
     max-width: 1100px;
     margin: 0 auto;
 }
 
 .container .content {
-    border: 2px solid blue;
     max-width: 550px;
     display: flex;
     flex-direction: column;
@@ -94,6 +94,9 @@ ul {
     color: #121212;
 }
 
-.container img {
-    border: 2px solid black;
+.section .container img {
+    width: 750px;
+    height: 600px;
+    position: relative;
+    right: 50px;
 }
