--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,10 @@ body {
     background-color: #121212;
 }
 
-.navbar {
-    background-color:#121212;
-}
-
 .navbar .container {
     max-width: 1100px;
     margin: 0 auto;
-    padding: 15px 30px;
+    padding: 50px 30px;
     display: flex;
     justify-content: space-between;
 }
@@ -49,7 +45,7 @@ ul {
     display: flex;
     padding: 30px;
     max-width: 1100px;
-    margin: 0 auto;
+    margin: auto;
 }
 
 .container .content {
