--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,15 @@ body {
     background-color: #121212;
 }
 
+.navbar {
+    height: 100px;
+}
+
 .navbar .container {
+    height: 100%;
     max-width: 1100px;
     margin: 0 auto;
-    padding: 50px 30px;
+    padding: 15px 30px;
     display: flex;
     justify-content: space-between;
 }
@@ -41,9 +46,16 @@ ul {
     color: #EEE9DB;
 }
 
+.section{
+    height: 825px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .section .container {
     display: flex;
-    padding: 30px;
+    padding: 0px 30px;
     max-width: 1100px;
     margin: auto;
 }
