--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,20 @@
     padding: 0;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #121212;
 }
 
 .navbar {
-    height: 100px;
+    height: 10%;
 }
 
 .navbar .container {
-    height: 100%;
     max-width: 1100px;
     margin: 0 auto;
     padding: 15px 30px;
@@ -47,7 +50,7 @@ ul {
 }
 
 .section{
-    height: 825px;
+    height: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
