--- a/signup.css
+++ b/signup.css
@@ -20,7 +20,6 @@ html, body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 40px;
     border-radius: 20px;
 }
 
@@ -28,6 +27,7 @@ h1 {
     color: #EEE9DB;
     font-size: 35px;
     font-weight: 600;
+    margin-bottom: 40px;
 }
 
 form {
@@ -76,12 +76,28 @@ form {
 }
 
 .submit button {
+    width: 350px;
+    margin: 30px 0px;
     background-color: #F9B217;
-    width: 100%;
     font-size: 20px;
     font-weight: 700;
     padding: 10px;
     border: none;
     border-radius: 5px;
     outline: none;
+}
+
+.continue-with {
+    color: #EEE9DB;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 30px;
+}
+
+.continue-with .line {
+    border-bottom: 1px solid #EEE9DB;
+    width: 113px;
 }
