--- a/signup.css
+++ b/signup.css
@@ -22,7 +22,7 @@ body {
 
 .signup .container {
     background-color: #282828;
-    padding: 30px 100px;
+    padding: 30px 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -73,8 +73,24 @@ form {
     color: transparent;
 }
 
+.input-group input:invalid {
+    border: 1px solid red;
+}
+
+.input-group input:invalid~label {
+    background-color: #282828;
+    font-size: 12px;
+    color: #EEE9DB;
+    padding: 2px 3px;
+    top: 0;
+}
+
+.input-group input:valid {
+    border: 1px solid green;
+}
+
 .input-group input:focus~label,
-.input-group input:valid~label{
+.input-group input:valid~label {
     background-color: #282828;
     font-size: 12px;
     color: #EEE9DB;
