--- a/signup.css
+++ b/signup.css
@@ -77,20 +77,22 @@ form {
     border: 1px solid red;
 }
 
-.input-group input:invalid~label {
+/* .input-group input:invalid~label {
     background-color: #282828;
     font-size: 12px;
     color: #EEE9DB;
     padding: 2px 3px;
     top: 0;
-}
+} */
 
 .input-group input:valid {
     border: 1px solid green;
 }
 
+
+/* style if the input is focused AND/OR is valid */
 .input-group input:focus~label,
-.input-group input:valid~label {
+.input-group input:not(:placeholder-shown)~label {
     background-color: #282828;
     font-size: 12px;
     color: #EEE9DB;
