apply style for :valid or :invalid when user has entered input

--- a/signup.css
+++ b/signup.css
@@ -73,24 +73,14 @@ form {
     color: transparent;
 }
 
-.input-group input:invalid {
+.input-group input:invalid:not(:placeholder-shown)  {
     border: 1px solid red;
 }
 
-/* .input-group input:invalid~label {
-    background-color: #282828;
-    font-size: 12px;
-    color: #EEE9DB;
-    padding: 2px 3px;
-    top: 0;
-} */
-
-.input-group input:valid {
+.input-group input:valid:not(:placeholder-shown) {
     border: 1px solid green;
 }
 
-
-/* style if the input is focused AND/OR is valid */
 .input-group input:focus~label,
 .input-group input:not(:placeholder-shown)~label {
     background-color: #282828;
