add style for button hover and set pointer

--- a/signup.css
+++ b/signup.css
@@ -100,6 +100,11 @@ form {
     border: none;
     border-radius: 5px;
     outline: none;
+    cursor: pointer;
+}
+
+.submit button:hover {
+    background-color: #cf8e00;
 }
 
 .continue-with {
